# mathgen

./: CMakeLists.txt  Program.cs
